--- a/wear/src/main/res/layout/activity_activate.xml
+++ b/wear/src/main/res/layout/activity_activate.xml
@@ -42,7 +42,7 @@
                         android:layout_toEndOf="@+id/number_1"
                         android:layout_toRightOf="@+id/number_1"
                         android:id="@+id/number_1_2"
-                        android:text="@string/api_activity_1_21"
+                        android:text="@string/api_activate_1_2"
                         android:textColor="@color/api_text_accent"/>
 
                     <TextView
