fix or disable the rest of the lint checks and enable abort on failure

--- a/shared/src/main/res/layout-sw600dp-land/activity_messenger.xml
+++ b/shared/src/main/res/layout-sw600dp-land/activity_messenger.xml
@@ -29,7 +29,8 @@
         android:id="@+id/status_bar"
         android:orientation="horizontal"
         android:backgroundTint="@color/colorPrimaryDark"
-        android:backgroundTintMode="multiply" />
+        android:backgroundTintMode="multiply"
+        tools:ignore="InconsistentLayout" />
 
     <LinearLayout
         android:layout_width="match_parent"
