--- a/shared/src/main/res/layout/bottom_sheet_edit_scheduled_message.xml
+++ b/shared/src/main/res/layout/bottom_sheet_edit_scheduled_message.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/drawerBackground"
@@ -25,6 +26,7 @@
     <EditText
         android:layout_marginTop="12dp"
         android:id="@+id/message"
+        android:hint="@string/type_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -41,14 +43,16 @@
             android:layout_height="wrap_content"
             android:background="?selectableItemBackground"
             android:text="@string/delete"
-            android:layout_marginEnd="12dp"/>
+            android:layout_marginEnd="12dp"
+            tools:ignore="ButtonStyle" />
 
         <Button
             android:id="@+id/save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?selectableItemBackground"
-            android:text="@string/save"/>
+            android:text="@string/save"
+            tools:ignore="ButtonStyle" />
 
     </LinearLayout>
 
