--- a/shared/src/main/res/layout/bottom_sheet_custom_snooze.xml
+++ b/shared/src/main/res/layout/bottom_sheet_custom_snooze.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/drawerBackground"
@@ -16,7 +17,8 @@
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:inputType="number"
-            android:text="0"/>
+            android:text="0"
+            tools:ignore="HardcodedText,LabelFor" />
 
         <TextView
             android:layout_marginStart="8dp"
@@ -41,7 +43,8 @@
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:inputType="number"
-            android:text="30"/>
+            android:text="30"
+            tools:ignore="HardcodedText,LabelFor" />
 
         <TextView
             android:layout_marginStart="8dp"
