add a keyboard layout to use the 'return' key to send messages

--- a/shared/src/main/res/values/arrays.xml
+++ b/shared/src/main/res/values/arrays.xml
@@ -197,14 +197,14 @@
 
     <string-array name="keyboard_layout">
         <item>@string/keyboard_default</item>
-        <!--<item>@string/keyboard_send_key</item>-->
         <item>@string/keyboard_enter_key</item>
+        <item>@string/keyboard_send_key</item>
     </string-array>
 
     <string-array name="keyboard_layout_values">
         <item>default</item>
-        <!--<item>send</item>-->
         <item>enter</item>
+        <item>send</item>
     </string-array>
 
     <string-array name="notification_actions">
