quick scroll using the scroll indicators

--- a/shared/src/main/res/layout/fragment_message_list.xml
+++ b/shared/src/main/res/layout/fragment_message_list.xml
@@ -16,6 +16,7 @@
 
 <xyz.klinker.messenger.view.ElasticDragDismissFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -23,7 +24,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clickable="true">
+        android:clickable="true"
+        android:focusable="true">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -42,15 +44,32 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v7.widget.RecyclerView
+        <RelativeLayout
             android:layout_width="match_parent"
+            android:orientation="horizontal"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:id="@+id/message_list"
-            android:layout_marginStart="@dimen/message_list_padding"
-            android:layout_marginEnd="@dimen/message_list_padding"
-            android:alpha="0"
-            android:scrollbars="vertical" />
+            android:layout_weight="1">
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/message_list"
+                android:layout_marginStart="@dimen/message_list_padding"
+                android:layout_marginEnd="@dimen/message_list_padding"
+                android:alpha="0"
+                android:scrollbars="none"
+                tools:ignore="NestedWeights" />
+
+            <com.turingtechnologies.materialscrollbar.TouchScrollBar
+                android:id="@+id/drag_scrollbar"
+                android:layout_width="wrap_content"
+                app:msb_recyclerView="@id/message_list"
+                app:msb_lightOnTouch="true"
+                app:msb_hideDelayInMilliseconds="700"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true" />
+
+        </RelativeLayout>
 
         <FrameLayout
             android:layout_width="wrap_content"
