update to sdk 26

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -19,6 +19,7 @@
     <version
         name="2.4.0"
         description="June 1st, 2017">
+        <text>Android O: </text>
         <text>NEW: "Keyboard Layout" option to send messages when you press the "Return" key</text>
         <text>NEW: Automatically archive conversations that you blacklist</text>
         <text>NEW: Enlarge font sizes when the messages are only emojis</text>
