--- a/shared/src/main/res/layout/message_delivered.xml
+++ b/shared/src/main/res/layout/message_delivered.xml
@@ -33,6 +33,7 @@
         android:background="@drawable/message_sent_background"
         android:backgroundTint="@color/drawerBackground"
         android:maxWidth="@dimen/max_message_width"
+        android:minWidth="@dimen/min_mms_picture_width"
         android:paddingStart="8dp"
         android:paddingEnd="20dp"
         android:clickable="true"
@@ -42,7 +43,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxHeight="@dimen/max_message_width"
-            android:minWidth="@dimen/min_mms_picture_width"
             android:scaleType="centerInside"
             android:id="@+id/image"
             android:transitionName="image"
@@ -75,10 +75,12 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/timestamp_height"
         android:textSize="12sp"
         android:textColor="@color/secondaryText"
         android:id="@+id/timestamp"
-        android:layout_marginEnd="20dp" />
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp" />
 
 </LinearLayout>
