--- a/shared/src/main/res/layout/message_delivered_round.xml
+++ b/shared/src/main/res/layout/message_delivered_round.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (C) 2016 Jacob Klinker
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -33,6 +34,7 @@
         android:background="@drawable/message_circle_background"
         android:backgroundTint="@color/drawerBackground"
         android:maxWidth="@dimen/max_message_width"
+        android:minWidth="@dimen/min_mms_picture_width"
         android:clickable="true"
         android:id="@+id/message_holder">
 
@@ -40,7 +42,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxHeight="@dimen/max_message_width"
-            android:minWidth="@dimen/min_mms_picture_width"
             android:scaleType="centerInside"
             android:id="@+id/image"
             android:transitionName="image"
@@ -66,13 +67,14 @@
         android:tint="@color/primaryText"
         android:layout_marginEnd="12dp"
         android:contentDescription="@string/delivered" />
-
+    
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/timestamp_height"
         android:textSize="12sp"
         android:textColor="@color/secondaryText"
         android:id="@+id/timestamp"
-        android:layout_marginEnd="20dp" />
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="4dp" />
 
 </LinearLayout>
