add text flag to the compose activity input. Some users aren't able to paste into it, for some reason?

--- a/shared/src/main/res/layout/activity_compose.xml
+++ b/shared/src/main/res/layout/activity_compose.xml
@@ -53,6 +53,7 @@
                 android:textColorHint="@color/toolbarEditTextHint"
                 android:textColor="@android:color/white"
                 android:gravity="start"
+                android:inputType="textNoSuggestions"
                 android:id="@+id/contact_entry" />
 
         </xyz.klinker.messenger.shared.view.MaxHeightScrollView>
