--- a/shared/src/main/res/menu/action_mode_message_list.xml
+++ b/shared/src/main/res/menu/action_mode_message_list.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:ignore="AlwaysShowAction">
 
     <item
         android:id="@+id/menu_delete_messages"
         android:title="@string/delete"
         android:icon="@drawable/ic_delete"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/menu_share_message"
         android:title="@string/share"
         android:icon="@drawable/ic_share"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/menu_copy_message"
         android:title="@string/copy_message"
         android:icon="@drawable/ic_copy"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/menu_message_details"
         android:title="@string/view_details"
         android:icon="@drawable/ic_info"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
 </menu>
