--- a/api_implementation/src/main/res/values-fr/api_string.xml
+++ b/api_implementation/src/main/res/values-fr/api_string.xml
@@ -26,6 +26,7 @@
     <string name="api_password_confirmation">Confirmez votre mot de passe</string>
     <string name="api_name">Nom</string>
     <string name="api_phone_number">Numéro de téléphone</string>
+    <string name="api_connecting">Connexion au serveur...</string>
     <string name="api_device_error">Une erreur est survenue en ajoutant votre appareil, veuillez réessayer !</string>
     <string name="api_add_second_primary_device">Il semble que vous ayez déjà un appareil principal (%1$s) pour votre compte, et vous n\'en avez le droit qu\'à un seul. Voulez-vous remplacer l\'appareil principal par celui-ci, ce qui supprimerait l\'ancien ?</string>
     <string name="api_yes">Oui</string>
@@ -42,6 +43,7 @@
     <string name="api_activate_1">1</string>
     <string name="api_activate_2">2</string>
     <string name="api_activate_1_1">Rediriger vers</string>
+    <string name="api_activate_1_2">wear.klinkerapps.com</string>
     <string name="api_activate_1_3">sur un appareil mobile ou sur un ordinateur.</string>
     <string name="api_activate_2_1">Sur le site web</string>
     <string name="api_activate_2_2">Entrer le code à droite</string>
