--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,7 +17,13 @@
 <changelog>
 
     <version
-        name="2.4.1 BETA"
+        name="2.4.2"
+        description="June 21st, 2017">
+        <text>Improvements to how notifications are handled</text>
+    </version>
+
+    <version
+        name="2.4.1"
         description="June 13th, 2017">
         <text>Bug fixes for first beta</text>
     </version>
