--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -20,6 +20,7 @@
         name="2.4.2"
         description="June 21st, 2017">
         <text>Improvements to how notifications are handled</text>
+        <text>Improvements to settings layout</text>
     </version>
 
     <version
