--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -82,6 +82,7 @@
     <string name="pref_wake_screen" translatable="false">wake_screen</string>
     <string name="pref_heads_up" translatable="false">heads_up</string>
     <string name="pref_strip_unicode" translatable="false">strip_unicode</string>
+    <string name="pref_internal_browser" translatable="false">internal_browser</string>
     <string name="pref_history_in_notifications" translatable="false">history_in_notifications</string>
     <string name="pref_giffgaff" translatable="false">giffgaff_delivery</string>
     <string name="pref_notification_actions" translatable="false">notification_actions</string>
